Changing definition of GCS

--- a/project-plan.html
+++ b/project-plan.html
@@ -6,9 +6,9 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="dcterms.date" content="2025-10-03">
+<meta name="dcterms.date" content="2025-10-08">
 
-<title>project-plan</title>
+<title>Project-plan</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -65,7 +65,7 @@ div.csl-indent {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">project-plan</h1>
+<h1 class="title">Project-plan</h1>
 </div>
 
 
@@ -76,7 +76,7 @@ div.csl-indent {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">October 3, 2025</p>
+      <p class="date">October 8, 2025</p>
     </div>
   </div>
   
@@ -100,7 +100,8 @@ I might have missed some points in the report not being a clinician working on t
 </section>
 <section id="management-of-tbi" class="level2">
 <h2 class="anchored" data-anchor-id="management-of-tbi">Management of TBI</h2>
-<!-- MGW: Consider discussing the management of trauma first and then the management of TBI, as many of the things you write below also apply to non-TBI trauma patients -->
+<!-- MGW: Consider discussing the management of trauma first and then the management of TBI, as many of the things you
+write below also apply to non-TBI trauma patients -->
 <p>Initial management of TBI spans prehospital and early in-hospital phases and centres on rapid physiological stabilisation and diagnostics in order for secondary injuries to be limited. Protection of the airway in patients with impaired consciousness, adequate oxygenation and normocapnia, and fast correction of hypotension are all prioritised in the initial phase of management as hypoxia and low blood pressures are associated with an increased mortality <span class="citation" data-cites="Carney2017 Stocchetti2017 Chesnut1993 Spaite2017">(<a href="#ref-Carney2017" role="doc-biblioref">6</a>–<a href="#ref-Spaite2017" role="doc-biblioref">9</a>)</span>. Non-contrast head CT should be performed without delay to identify surgically remediable lesions. Depending on mechanism and physiology, whole-body CT may be used selectively, as randomised data show no mortality advantage over targeted imaging, while observational work underscores the benefit of immediate CT pathways for severely injured patients <span class="citation" data-cites="Sierink2016 Yamamoto2023">(<a href="#ref-Sierink2016" role="doc-biblioref">10</a>,<a href="#ref-Yamamoto2023" role="doc-biblioref">11</a>)</span>. Haemostatic strategies in the early stages, such as administering tranexamic acid within three hours of injury, can reduce mortality <span class="citation" data-cites="Crash-32019">(<a href="#ref-Crash-32019" role="doc-biblioref">12</a>)</span>. After this initial phase, depending on the patient’s condition, management transitions to other areas of the hospital, where prevention of secondary systemic and intracranial insults becomes the primary focus.</p>
 <p>The management of TBI in the ICU is particularly challenging. Given the heterogeneity and dynamic nature of the condition, care must prioritise the prevention and limitation of secondary systemic threats such as hypoxia, hypercapnia, arterial hypotension, hyponatraemia and pyrexia. Equal attention must also be directed toward secondary intracranial threats, including expanding haematomas, cerebral contusions and rises in intracranial pressure <span class="citation" data-cites="Robba2025 Stocchetti2017 Slot2025">(<a href="#ref-Robba2025" role="doc-biblioref">5</a>,<a href="#ref-Stocchetti2017" role="doc-biblioref">7</a>,<a href="#ref-Slot2025" role="doc-biblioref">13</a>)</span>. Although these complexities are often anticipated, they render ICU care especially vulnerable to deviations from optimal practice, thereby posing risks to both patient safety and overall quality of care.</p>
 <p>The intensive care of patients with TBI has been addressed in both guidelines and reviews. Multiple recent reviews and guideline updates consistently refer to the Brain Trauma Foundation (BTF) Fourth Edition, which remains a central reference for modern management <span class="citation" data-cites="Robba2025 Stocchetti2017 Slot2025 Wiles2022 Dash2018">(<a href="#ref-Robba2025" role="doc-biblioref">5</a>,<a href="#ref-Stocchetti2017" role="doc-biblioref">7</a>,<a href="#ref-Slot2025" role="doc-biblioref">13</a>–<a href="#ref-Dash2018" role="doc-biblioref">15</a>)</span>. The BTF advises treatment strategies to lower ICP and how to maintain cerebral perfusion pressure (CPP) within optimal ranges. It also discusses what practices to avoid, such as prophylactic hyperventilation within the first 24 hours and corticosteroid usage.</p>
@@ -158,6 +159,7 @@ If too long M&M will describe these parameters)” --></p>
 </section>
 <section id="statistical-methods." class="level2">
 <h2 class="anchored" data-anchor-id="statistical-methods.">Statistical methods. <!-- CP: Pls recall aim 1 and aim 2 and develop the below text in relation to these 2 aims: see criteria--></h2>
+<!-- Write that there will be descripitve analysis for OFI prevelance...-->
 <p>For continuous variables, medians and interquartile ranges (25th-75th percentiles) are used. Categorical variables are presented using the number of patients and their corresponding percentages of the cohort. Complete case analysis will be used; as such, only cases with complete data for all variables of interest will be used.</p>
 <p>Logistic regression was used to examine the association between patient and process-related factors and OFI. Bivariable logistic regression to assess unadjusted associations between patient and process factors and OFI was initially performed. To estimate adjusted associations, these variables were entered into a multivariable logistic regression model. Results are reported as Odds Ratio (OR) with 95% confidence interval (CI), and a p-value of &lt;0.05 was used as the threshold for statistical significance. To ensure objectivity, all statistical analyses were initially performed on synthetic data before being applied to the combined trauma registry and trauma care quality database. Statistical analyses were conducted in R.</p>
 </section>
