Adding flowchart to results

--- a/project-plan.html
+++ b/project-plan.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="dcterms.date" content="2025-10-08">
+<meta name="dcterms.date" content="2025-11-10">
 
 <title>Project-plan</title>
 <style>
@@ -76,7 +76,7 @@ div.csl-indent {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">October 8, 2025</p>
+      <p class="date">November 10, 2025</p>
     </div>
   </div>
   
@@ -141,7 +141,7 @@ If too long M&M will describe these parameters)” --></p>
 </section>
 <section id="participants" class="level2">
 <h2 class="anchored" data-anchor-id="participants">Participants</h2>
-<p>Included in the study were all adult patients with TBI recorded in the Karolinska trauma registry between 2012 and 2023 who also had been screened for opportunity for improvements. Furthermore, TBI was defined as a Glasgow Coma Scale (GCS) score of ≤8 combined with an Abbreviated Injury Scale (AIS) ≥3 for the head region. Patients were eligible irrespective of level of care and were not restricted to intensive care admissions.</p>
+<p>Included in the study were all adult patients with TBI recorded in the Karolinska trauma registry between 2012 and 2023 who also had been screened for opportunity for improvements. Furthermore, TBI was defined as a Glasgow Coma Scale (GCS) score of ≤8 combined with an Abbreviated Injury Scale (AIS) severity ≥3 for the head region. Patients were eligible irrespective of level of care and were not restricted to intensive care admissions.</p>
 <p>Patients younger than 18 years were excluded, as their trauma follows separate clinical care systems and quality review processes that differ from those for adults. Also excluded were patients declared dead on arrival, since assessment of opportunities for improvement in these cases is not relevant to the aim of this study.</p>
 </section>
 <section id="variables" class="level2">
